--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
             <div class="col-lg-3 col-md-12">
               <div class="social-link">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
               </div>
             </div>
@@ -396,15 +396,9 @@
                 <a href="#" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#" target="_blank">
-                  <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="#" target="_blank">
-                  <i class="fab fa-tumblr"></i>
-                </a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+
               </div>
             </div>
           </div>
