--- a/about-us.html
+++ b/about-us.html
@@ -91,7 +91,7 @@
             <div class="constik-responsive-menu">
               <div class="logo">
                 <a href="index.html">
-                  <img src="assets/img/logojy.png" class="logo1" alt="logo">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                   <!-- <img src="assets/img/logojy.png" class="logo2" alt="logo"> -->
                 </a>
               </div>
@@ -104,7 +104,7 @@
             <nav class="navbar navbar-expand-md navbar-light">
               <div class="collapse navbar-collapse mean-menu">
                 <a href="index.html" class="navbar-brand">
-                  <img src="assets/img/logojy.png" class="logo1" alt="logo" width="250px">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                 </a>
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -192,7 +192,7 @@
           <div class="col-lg-5">
             <div class="about-content">
               <h2 class="color-secondary">We Build Everything As Your <span>Dream</span></h2>
-              <p>we take pride in curating a diverse range of exceptional properties that cater to every unique
+              <p>We take pride in curating a diverse range of exceptional properties that cater to every unique
                 preference
                 and aspiration. Whether you're seeking a tranquil plot of land to build your dream home or a luxurious
                 house ready to welcome you with open doors, we have precisely what you need.
@@ -234,24 +234,29 @@
             <div class="service-item-single">
               <i><img src="assets/img/icons/stairs.png" alt="Icon"></i>
               <h3><a href="services-details.html">Our Mission</a></h3>
-              <p>You can dream, create, design, and build the most wonder ful place in the world. But it requires
-                people.</p>
+              <p>To provide exceptional real estate and construction solutions that exceed our clients' expectations. We
+                are committed to delivering high-quality projects, fostering strong relationships, and making a positive
+                impact on the communities we serve.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="service-item-single">
               <i><img src="assets/img/icons/saw-machine.png" alt="Icon"></i>
               <h3><a href="services-details.html">Our Vision</a></h3>
-              <p>You can dream, create, design, and build the most wonder ful place in the world. But it requires
-                people.</p>
+              <p>Our vision is to be a leading real estate and construction company, recognized for our excellence,
+                innovation, and commitment to sustainable development. We aim to transform landscapes, create iconic
+                structures, and shape vibrant communities.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="service-item-single">
               <i><img src="assets/img/icons/helmet.png" alt="Icon"></i>
               <h3><a href="services-details.html">Our Values</a></h3>
-              <p>You can dream, create, design, and build the most wonder ful place in the world. But it requires
-                people.</p>
+              <p>We strive for excellence in all aspects of our work, delivering superior quality,
+                craftsmanship, and attention to detail.
+
+                We uphold the highest ethical standards, transparency, and honesty in all our interactions
+                with clients, and stakeholders.</p>
             </div>
           </div>
         </div>
@@ -388,7 +393,7 @@
             <div class="footer-widget">
               <div class="navbar-brand">
                 <a href="index.html">
-                  <img src="assets/img/logojy.png" class="footer-logo1" alt="Logo" width="270px">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                 </a>
               </div>
               <p>Living a home legacy for your family.</p>
