--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="constik-responsive-menu">
               <div class="logo">
                 <a href="index.html">
-                  <img src="assets/img/logojy.png" class="logo1" alt="logo">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                   <!-- <img src="assets/img/logojy.png" class="logo2" alt="logo"> -->
                 </a>
               </div>
@@ -104,7 +104,7 @@
             <nav class="navbar navbar-expand-md navbar-light">
               <div class="collapse navbar-collapse mean-menu">
                 <a href="index.html" class="navbar-brand">
-                  <img src="assets/img/logojy.png" class="logo1" alt="logo" width="250px">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                 </a>
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -250,7 +250,7 @@
           <div class="col-lg-5">
             <div class="about-content">
               <h2 class="color-secondary">We Build Everything As Your <span>Dream</span></h2>
-              <p>we take pride in curating a diverse range of exceptional properties that cater to every unique
+              <p>We take pride in curating a diverse range of exceptional properties that cater to every unique
                 preference
                 and aspiration. Whether you're seeking a tranquil plot of land to build your dream home or a luxurious
                 house ready to welcome you with open doors, we have precisely what you need.
@@ -427,7 +427,7 @@
                 attention to detail, our properties are a testament to fine craftsmanship and architectural brilliance
               </p>
               <div class="cta-btn">
-                <a href="projects.html" class="primary-btn">Explore All Projects</a>
+                <a href="#" class="primary-btn">Explore All Projects</a>
               </div>
             </div>
           </div>
@@ -446,15 +446,15 @@
                   <img src="assets/img/projects/project-img-2.jpg" alt="Demo Image">
                 </div>
                 <div class="overlay-content">
-                  <h3><a href="projects-details.html">Studio Architecture</a></h3>
+                  <h3><a href="#">Studio Architecture</a></h3>
                 </div>
               </div>
               <div class="slider-item">
                 <div class="image">
-                  <img src="assets/img/projects/lands2.png" alt="Demo Image" style="width:375px;height:429px">
+                  <img src="#" alt="Demo Image" style="width:375px;height:429px">
                 </div>
                 <div class="overlay-content">
-                  <h3><a href="projects-details.html">Lands</a></h3>
+                  <h3><a href="#">Lands</a></h3>
                 </div>
               </div>
 
@@ -550,9 +550,9 @@
                       <div class="select-box">
                         <select class="form-control">
                           <option value="5">Architecture</option>
-                          <option value="1">Painting & Tiling</option>
-                          <option value="2">Road Construction</option>
-                          <option value="0">Interior Design</option>
+                          <option value="1">Property Listing</option>
+                          <option value="2">Property Management</option>
+                          <option value="0">Investment Consulting</option>
                         </select>
                       </div>
                     </div>
@@ -580,8 +580,8 @@
       <div class="container">
         <div class="section-title style-two">
           <h2 class="color-secondary">Get Every Answer Of <span>Questions</span></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua.</p>
+          <p>Here are some frequently asked questions from majority of our clients. We will do best to answer you all.
+          </p>
         </div>
         <div class="panel-group" id="accordion">
           <div class="row">
@@ -590,15 +590,14 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse1">
-                      What are the benefits to work with Constik?
+                      How can I find available properties for sale or rent?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>You can explore our website or contact our team directly to access our up-to-date property
+                      listings and discuss your specific requirements.</p>
                   </div>
                 </div>
               </div>
@@ -606,15 +605,14 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse2">
-                      Where can I find out about funding?
+                      Do you handle both residential and commercial properties?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>Yes, we specialize in both residential and commercial properties, catering to the diverse needs
+                      of individuals, families, and businesses.</p>
                   </div>
                 </div>
               </div>
@@ -622,15 +620,14 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse3">
-                      How to pay a single house projects?
+                      How experienced is your team in the real estate and construction industry?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>Our team has a combined experience of over [X] years in the industry, bringing a wealth of
+                      knowledge and expertise to every project we undertake.</p>
                   </div>
                 </div>
               </div>
@@ -638,15 +635,14 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse4">
-                      What will happen when I’ve sent my application?
+                      Can you assist with obtaining financing for property purchases or construction projects?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse4" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>Yes, we can provide guidance and connect you with reputable financial institutions or lenders who
+                      specialize in real estate financing.</p>
                   </div>
                 </div>
               </div>
@@ -656,15 +652,15 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse5">
-                      How can I make a change to my application?
+                      Do you offer property management services?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse5" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>Yes, we offer comprehensive property management services to ensure the smooth operation and
+                      maintenance of your properties, including rent collection, tenant management, and property upkeep.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -672,15 +668,15 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse6">
-                      Is it possible to request personalized projects?
+                      How long does a typical construction project take to complete?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse6" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>The duration of a construction project depends on various factors, including the size,
+                      complexity, and scope of the project. We provide detailed project timelines and keep clients
+                      informed throughout the process..</p>
                   </div>
                 </div>
               </div>
@@ -688,15 +684,15 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse7">
-                      What are the benefits to work with Constik?
+                      What sustainability practices do you implement in your construction projects?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse7" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>We prioritize sustainable building practices, incorporating energy-efficient design, green
+                      materials, and environmentally friendly construction techniques to minimize our ecological
+                      footprint.</p>
                   </div>
                 </div>
               </div>
@@ -704,15 +700,14 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a class="collapsed" data-bs-toggle="collapse" href="#collapse8">
-                      Do you sell also completed eco-houses?
+                      Are you licensed and insured?
                     </a>
                   </h4>
                 </div>
                 <div id="collapse8" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et dolore magna.</p>
+                    <p>Yes, we are fully licensed, insured, and comply with all necessary regulations and industry
+                      standards to provide reliable and trustworthy services to our clients.</p>
                   </div>
                 </div>
               </div>
@@ -817,7 +812,7 @@
             <div class="footer-widget">
               <div class="navbar-brand">
                 <a href="index.html">
-                  <img src="assets/img/logojy.png" class="footer-logo1" alt="Logo" width="270px">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                 </a>
               </div>
               <p>Living a home legacy for your family.</p>
