--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
             <div class="constik-responsive-menu">
               <div class="logo">
                 <a href="index.html">
-                  <img src="assets/img/logojy.png" class="logo1" alt="logo">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                   <!-- <img src="assets/img/logojy.png" class="logo2" alt="logo"> -->
                 </a>
               </div>
@@ -104,7 +104,7 @@
             <nav class="navbar navbar-expand-md navbar-light">
               <div class="collapse navbar-collapse mean-menu">
                 <a href="index.html" class="navbar-brand">
-                  <img src="assets/img/logojy.png" class="logo1" alt="logo" width="250px">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                 </a>
                 <ul class="navbar-nav">
                   <li class="nav-item">
@@ -261,7 +261,7 @@
             <div class="footer-widget">
               <div class="navbar-brand">
                 <a href="index.html">
-                  <img src="assets/img/logojy.png" class="footer-logo1" alt="Logo" width="270px">
+                  <img src="assets/img/jy3d.jpg" class="logo1" alt="logo" width="100px">
                 </a>
               </div>
               <p>Living a home legacy for your family.</p>
