git commit changes for live

--- a/about-us.html
+++ b/about-us.html
@@ -152,9 +152,9 @@
           </ul>
         </div>
       </div>
-      <div class="bg-image">
+      <!-- <div class="bg-image">
         <img src="assets/img/page-title/about-bg.jpg" alt="Demo Image">
-      </div>
+      </div> -->
     </div>
     <!-- end page title area -->
 
@@ -422,7 +422,7 @@
 
                 <li>
                   <i class="flaticon-play-button"></i>
-                  <a href="#">Terms & Conditions</a>
+                  <a href="#">Contact us</a>
                 </li>
               </ul>
             </div>
