--- a/contact.html
+++ b/contact.html
@@ -152,9 +152,9 @@
           </ul>
         </div>
       </div>
-      <div class="bg-image">
+      <!-- <div class="bg-image">
         <img src="assets/img/page-title/contact-bg.jpg" alt="Demo Image">
-      </div>
+      </div> -->
     </div>
     <!-- end page title area -->
 
@@ -192,9 +192,7 @@
             <div class="contact-form">
               <div class="content">
                 <h3>Get In touch</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus totam minima quam a ab cumque eos
-                  nulla
-                  eaque animi non natus totam minima quam.</p>
+                <p>Let us know what you need and expect from us by reaching us through these contact lines. You can send us a direct meesage below.</p>
               </div>
               <form id="contactForm">
                 <div class="form-group">
@@ -290,7 +288,7 @@
 
                 <li>
                   <i class="flaticon-play-button"></i>
-                  <a href="#">Terms & Conditions</a>
+                  <a href="#">Contact</a>
                 </li>
               </ul>
             </div>
