--- a/index.html
+++ b/index.html
@@ -289,9 +289,7 @@
           <div class="col-lg-5">
             <div class="works-content">
               <h2 class="color-secondary">See How We Manage Our <span>Works</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna
-                aliqua. Lorem ipsum dolor sit amet consectetur.</p>
+              <p>We Tailored our property services to your unique preferences below.</p>
               <div class="works-item">
                 <div class="works-item-single">
                   <i><img src="assets/img/icons/architect.png" alt="Icon"></i>
@@ -426,9 +424,9 @@
                 utmost
                 attention to detail, our properties are a testament to fine craftsmanship and architectural brilliance
               </p>
-              <div class="cta-btn">
+              <!-- <div class="cta-btn">
                 <a href="#" class="primary-btn">Explore All Projects</a>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-lg-auto col-md-12 pr-0">
@@ -487,9 +485,9 @@
               </div>
               <p>You can dream, create, design and renovate the most place in the world. But it requires more peoples.
               </p>
-              <div class="cta-btn">
+              <!-- <div class="cta-btn">
                 <a href="pricing.html" class="primary-btn">Estimate Your Costing</a>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-lg-7">
@@ -840,7 +838,7 @@
                 </li>
                 <li>
                   <i class="flaticon-play-button"></i>
-                  <a href="#">Terms & Conditions</a>
+                  <a href="#">Contact us</a>
                 </li>
               </ul>
             </div>
