--- a/about-us.html
+++ b/about-us.html
@@ -57,7 +57,7 @@
                   <div class="contact-info">
                     <div class="contact-info-content">
                       <p>call us:</p>
-                      <a href="tel:+14854560102">(+233) 020 252 4713</a>
+                      <a href="tel:+14854560102">(+233) 0500905483</a>
                     </div>
                   </div>
                 </div>
@@ -336,7 +336,7 @@
           <div class="map-pin pin-4 active">
             <div class='pin'><img src="assets/img/pin.png" alt="Pin"></div>
             <div class="pin-content">
-              <span>P.O.BOX DT2124 <br>Oyarifa Highway.</span>
+              <span>P.O.Box DT-2914 <br>Adenta Accra.</span>
             </div>
           </div>
           <!-- <div class="map-pin pin-5">
@@ -433,13 +433,13 @@
               <ul class="contact-info">
                 <li class="content">
                   <span class="tag">A</span>
-                  <span>P.O.BOX DT2124 <br>Oyarifa Highway.</span>
+                  <span>P.O.Box DT-2914 <br>Adenta Accra.</span>
                 </li>
                 <li class="content">
                   <span class="tag">P</span>
                   <span>
-                    <a href="tel:(00233)202524713">(+233) 020 252 4713</a>
-                    <a href="tel:(00233)202524739">(+233) 020 252 4739</a>
+                    <a href="tel:(00233)202524713">(+233) 0500905483</a>
+                    <a href="tel:(00233)202524739">(+233) 0536308424</a>
                   </span>
                 </li>
                 <li class="content">
