--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <div class="contact-info">
                     <div class="contact-info-content">
                       <p>call us:</p>
-                      <a href="tel:+14854560102">(+233) 020 252 4713</a>
+                      <a href="tel:+14854560102">(+233) 0500905483</a>
                     </div>
                   </div>
                 </div>
@@ -624,7 +624,7 @@
                 </div>
                 <div id="collapse3" class="panel-collapse collapse" data-bs-parent="#accordion">
                   <div class="panel-body">
-                    <p>Our team has a combined experience of over [X] years in the industry, bringing a wealth of
+                    <p>Our team has a combined experience of over 6 years in the industry, bringing a wealth of
                       knowledge and expertise to every project we undertake.</p>
                   </div>
                 </div>
@@ -718,7 +718,7 @@
 
 
     <!-- start testimonial section -->
-    <section class="testimonial-section testimonial-three ptb-100 bg-primary">
+    <!-- <section class="testimonial-section testimonial-three ptb-100 bg-primary">
       <div class="container">
         <div class="section-title style-two">
           <h2 class="color-secondary"><span>Thoughts</span> Of Our Satisfied Client About Us</h2>
@@ -773,7 +773,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- end testimonial section -->
 
     <!-- start newsletter section -->
@@ -850,13 +850,13 @@
               <ul class="contact-info">
                 <li class="content">
                   <span class="tag">A</span>
-                  <span>P.O.BOX DT2124 <br>Oyarifa Highway.</span>
+                  <span>P.O.Box DT-2914 <br>Adenta Accra.</span>
                 </li>
                 <li class="content">
                   <span class="tag">P</span>
                   <span>
-                    <a href="tel:(00233)202524713">(+233) 020 252 4713</a>
-                    <a href="tel:(00233)202524739">(+233) 020 252 4739</a>
+                    <a href="tel:(00233)202524713">(+233) 0500905483</a>
+                    <a href="tel:(00233)202524739">(+233) 0536308424</a>
                   </span>
                 </li>
                 <li class="content">
