--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                   <div class="contact-info">
                     <div class="contact-info-content">
                       <p>call us:</p>
-                      <a href="tel:+14854560102">(+233) 020 252 4713</a>
+                      <a href="tel:+14854560102">(+233) 0500905483</a>
                     </div>
                   </div>
                 </div>
@@ -168,7 +168,7 @@
                 <i class='flaticon-smartphone'></i>
                 <div class="info-content">
                   <p>call us</p>
-                  <a href="tel:+14854560102">(+233) 020 252 4713 </a>
+                  <a href="tel:+14854560102">(+233) 0500905483 </a>
                 </div>
               </div>
               <div class="info-item">
@@ -183,7 +183,7 @@
                 <div class="info-content">
                   <p>visit us</p>
                   <a href="#">DT2124
-                    Oyarifa Highway.</a>
+                    Adenta Accra.</a>
                 </div>
               </div>
             </div>
@@ -299,13 +299,13 @@
               <ul class="contact-info">
                 <li class="content">
                   <span class="tag">A</span>
-                  <span>P.O.BOX DT2124 <br>Oyarifa Highway.</span>
+                  <span>P.O.Box DT-2914 <br>Adenta Accra.</span>
                 </li>
                 <li class="content">
                   <span class="tag">P</span>
                   <span>
-                    <a href="tel:(00233)202524713">(+233) 020 252 4713</a>
-                    <a href="tel:(00233)202524739">(+233) 020 252 4739</a>
+                    <a href="tel:(00233)202524713">(+233) 0500905483</a>
+                    <a href="tel:(00233)202524739">(+233) 0536308424</a>
                   </span>
                 </li>
                 <li class="content">
